# agentcom

./: .gitignore  pyproject.toml
src/agentcom/: __init__.py  config.py  registry.py
src/agentcom/clients/: capability_client.py
src/agentcom/decorators/: __init__.py  capability_decorator.py  logger.py
src/agentcom/endpoints/: __init__.py  capabality_endpoint.py  session_endpoint.py
src/agentcom/models/: __init__.py  session.py
