[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcom"
version = "0.1.0"
description = "A silly way to standardize AI Agents communication"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Federico Serini", email = "federico.serini.se@pec.it" }
]
dependencies = [
  "fastapi>=0.95.0",
  "aiomisc>17.5.31",
  "aiohttp>3.11.12"
]

[tool.setuptools.packages.find]
where = ["src"]